--- a/services/user/configs/config.yaml
+++ b/services/user/configs/config.yaml
@@ -1,38 +1,16 @@
-server:
-  host: "0.0.0.0"
-  port: 50000
-  read_timeout: 5s
-  write_timeout: 10s
-  idle_timeout: 120s
-
 grpc:
-  host: "0.0.0.0"
-  port: 50001
+  port: 50053
 
-postgres:
-  host: "postgres"
-  port: 5432
-  username: "user_service"
-  password: "user_password"
-  database: "user_db"
-  max_open_conns: 10
-  max_idle_conns: 5
-  conn_timeout: 5s
-  query_timeout: 30s
-  ssl_mode: "disable"
-
-redis:
-  host: "redis"
-  port: 6379
-  password: ""
-  db: 0
-  pool_size: 10
-  min_idle_conns: 2
-  read_timeout: 1s
-  write_timeout: 1s
-  max_retries: 2
-
-logging:
-  level: "debug"
-  format: "console"
-  output: "stdout"
+database:
+  postgres:
+    host: localhost
+    port: 5432
+    user: postgres
+    password: postgres
+    dbname: qubool_kallyanam_user
+    sslmode: disable
+  redis:
+    host: localhost
+    port: 6379
+    password: ""
+    db: 0
