--- a/deploy/docker/Dockerfile.gateway
+++ b/deploy/docker/Dockerfile.gateway
@@ -2,36 +2,40 @@ FROM golang:1.23.4-alpine AS builder
 
 WORKDIR /app
 
-# Install necessary build tools
-RUN apk add --no-cache git
+ENV GOPROXY=https://goproxy.io,direct
 
-# Copy the entire services and pkg directories
-COPY services/ ./services/
-COPY pkg/ ./pkg/
+# Copy only necessary go.mod files
+COPY pkg/go.mod pkg/go.sum ./pkg/
+COPY services/gateway/go.mod ./services/gateway/
 
 # Download dependencies
 WORKDIR /app/services/gateway
-RUN go mod download
+RUN go mod download -x
+
+# Copy source code
+WORKDIR /app
+COPY pkg/ ./pkg/
+COPY services/gateway/ ./services/gateway/
 
 # Build the application
-RUN CGO_ENABLED=0 GOOS=linux go build -o /app/gateway-service ./cmd/main.go
+WORKDIR /app/services/gateway
+RUN CGO_ENABLED=0 go build -o /gateway ./cmd/main.go
 
-# Create final lightweight image
+# Use a small image for the final stage
 FROM alpine:latest
 
-RUN apk --no-cache add ca-certificates
+RUN apk --no-cache add ca-certificates wget
 
 WORKDIR /app
 
 # Copy binary from builder stage
-COPY --from=builder /app/gateway-service .
+COPY --from=builder /gateway .
 
-# Environment variables
-ENV SERVER_ADDRESS=:8080 \
-    GIN_MODE=debug \
-    AUTH_SERVICE_ADDRESS=auth-service:50011 \
-    LOG_LEVEL=debug
+# Copy config file
+COPY services/gateway/configs/config.yaml ./configs/
 
+# Expose port
 EXPOSE 8080
 
-CMD ["./gateway-service"]
+# Run the application
+CMD ["./gateway"]
