--- a/services/admin/configs/config.yaml
+++ b/services/admin/configs/config.yaml
@@ -1,25 +1,11 @@
-# services/admin/configs/config.yaml
-server:
-  host: "0.0.0.0"
-  port: 50054
-  timeout_seconds: 30
+grpc:
+  port: 50052
 
-postgres:
-  host: "postgres"
-  port: 5432
-  username: "postgres"
-  password: "password"
-  database: "admin"
-  ssl_mode: "disable"
-  max_open_conns: 10
-  max_idle_conns: 5
-  conn_timeout: 5s
-  query_timeout: 30s
-
-logging:
-  level: debug
-  development: true
-  encoding: console
-  output_paths:
-    - stdout
-  service_name: admin-service
+database:
+  postgres:
+    host: localhost
+    port: 5432
+    user: postgres
+    password: postgres
+    dbname: qubool_kallyanam_admin
+    sslmode: disable
