--- a/services/chat/configs/config.yaml
+++ b/services/chat/configs/config.yaml
@@ -1,24 +1,8 @@
-# services/chat/configs/config.yaml
-server:
-  host: "0.0.0.0"
-  port: 50053
-  timeout_seconds: 30
+grpc:
+  port: 50054
 
-mongodb:
-  host: "mongodb"
-  port: 27017
-  database: "chat"
-  username: ""
-  password: ""
-  ssl_mode: "disable"
-  timeout_seconds: 10
-  connect_timeout: 10s
-  server_selection_timeout: 5s
-
-logging:
-  level: debug
-  development: true
-  encoding: console
-  output_paths:
-    - stdout
-  service_name: chat-service
+database:
+  mongodb:
+    uri: mongodb://localhost:27017
+    database: qubool_kallyanam_chat
+    timeout_seconds: 10
