--- a/deploy/docker/Dockerfile.migration
+++ b/deploy/docker/Dockerfile.migration
@@ -4,27 +4,35 @@ WORKDIR /app
 
 ENV GOPROXY=https://goproxy.io,direct
 
-# Copy go.mod files
-COPY go.mod go.sum ./
+# Copy necessary go.mod files
 COPY tools/go.mod tools/go.sum ./tools/
+COPY pkg/go.mod pkg/go.sum ./pkg/
 
 # Download dependencies
-RUN go mod download
+WORKDIR /app/tools
+RUN go mod download -x
 
 # Copy source code
+WORKDIR /app
 COPY tools/ ./tools/
+COPY pkg/ ./pkg/
 
 # Build the migration tool
-RUN go build -o /bin/migration ./tools/cmd/migration
+WORKDIR /app/tools
+RUN CGO_ENABLED=0 go build -o /migration ./cmd/migration/main.go
 
-# Use a smaller image for the final container
+# Final image
 FROM alpine:latest
 
-# Install certificates for HTTPS
-RUN apk --no-cache add ca-certificates
+RUN apk --no-cache add bash postgresql-client ca-certificates
 
-# Copy the binary
-COPY --from=builder /bin/migration /bin/migration
+WORKDIR /app
 
-# Set the entrypoint
-ENTRYPOINT ["/bin/migration"]
+# Copy binary from builder stage
+COPY --from=builder /migration .
+
+# Create migration entrypoint script
+COPY deploy/docker/migration-entrypoint.sh /app/entrypoint.sh
+RUN chmod +x /app/entrypoint.sh
+
+ENTRYPOINT ["/app/entrypoint.sh"]
