--- a/deploy/compose/docker-compose.yml
+++ b/deploy/compose/docker-compose.yml
@@ -50,10 +50,19 @@ services:
     networks:
       - quboolkallyanam-network
 
-  # Microservices
+  # Email testing service (for development)
+  mailhog:
+    image: mailhog/mailhog
+    ports:
+      - "8025:8025" # Web UI
+      - "1025:1025" # SMTP server
+    networks:
+      - quboolkallyanam-network
+
+  # Migrations
   auth-migrations:
     build:
-      context: .
+      context: ../..
       dockerfile: deploy/docker/Dockerfile.migration
     environment:
       - DB_HOST=postgres
@@ -64,17 +73,35 @@ services:
       - DB_SSLMODE=disable
       - MIGRATIONS_DIR=/app/migrations
     volumes:
-      - ./services/auth/migrations/postgres:/app/migrations
+      - ../../services/auth/migrations/postgres:/app/migrations
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
     restart: on-failure
+    networks:
+      - quboolkallyanam-network
+
+  # Services
   auth:
     build:
       context: ../../
       dockerfile: deploy/docker/Dockerfile.auth
     environment:
+      - CONFIG_PATH=/app/configs/config.yaml
       - DB_HOST=postgres
+      - DB_PORT=5432
+      - DB_USER=postgres
+      - DB_PASSWORD=postgres
+      - DB_NAME=qubool_kallyanam_auth
       - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - SMTP_HOST=mailhog
+      - SMTP_PORT=1025
+      - EMAIL_USERNAME=test@example.com
+      - EMAIL_PASSWORD=password
+      - EMAIL_FROM=noreply@quboolkallyanam.com
+      - EMAIL_FROM_NAME=Qubool Kallyanam
+      - LOG_LEVEL=debug
     ports:
       - "50051:50051"
     restart: always
@@ -83,6 +110,8 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
+      auth-migrations:
+        condition: service_completed_successfully
     entrypoint: ["sh", "-c", "sleep 10 && ./auth"]
     healthcheck:
       test: ["CMD-SHELL", "grpc_health_probe -addr=:50051 || exit 1"]
@@ -93,92 +122,94 @@ services:
     networks:
       - quboolkallyanam-network
 
-  admin:
-    build:
-      context: ../../
-      dockerfile: deploy/docker/Dockerfile.admin
-    environment:
-      - DB_HOST=postgres
-    ports:
-      - "50052:50052"
-    restart: always
-    depends_on:
-      postgres:
-        condition: service_healthy
-    entrypoint: ["sh", "-c", "sleep 10 && ./admin"]
-    healthcheck:
-      test: ["CMD-SHELL", "grpc_health_probe -addr=:50052 || exit 1"]
-      interval: 10s     
-      timeout: 10s
-      retries: 10       
-      start_period: 40s
-    networks:
-      - quboolkallyanam-network
+  # admin:
+  #   build:
+  #     context: ../../
+  #     dockerfile: deploy/docker/Dockerfile.admin
+  #   environment:
+  #     - DB_HOST=postgres
+  #   ports:
+  #     - "50052:50052"
+  #   restart: always
+  #   depends_on:
+  #     postgres:
+  #       condition: service_healthy
+  #   entrypoint: ["sh", "-c", "sleep 10 && ./admin"]
+  #   healthcheck:
+  #     test: ["CMD-SHELL", "grpc_health_probe -addr=:50052 || exit 1"]
+  #     interval: 10s     
+  #     timeout: 10s
+  #     retries: 10       
+  #     start_period: 40s
+  #   networks:
+  #     - quboolkallyanam-network
 
-  user:
-    build:
-      context: ../../
-      dockerfile: deploy/docker/Dockerfile.user
-    environment:
-      - DB_HOST=postgres
-      - REDIS_HOST=redis
-    ports:
-      - "50053:50053"
-    restart: always
-    depends_on:
-      postgres:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
-    entrypoint: ["sh", "-c", "sleep 10 && ./user"]
-    healthcheck:
-      test: ["CMD-SHELL", "grpc_health_probe -addr=:50053 || exit 1"]
-      interval: 10s    
-      timeout: 10s
-      retries: 10       
-      start_period: 40s
-    networks:
-      - quboolkallyanam-network
+  # user:
+  #   build:
+  #     context: ../../
+  #     dockerfile: deploy/docker/Dockerfile.user
+  #   environment:
+  #     - DB_HOST=postgres
+  #     - REDIS_HOST=redis
+  #   ports:
+  #     - "50053:50053"
+  #   restart: always
+  #   depends_on:
+  #     postgres:
+  #       condition: service_healthy
+  #     redis:
+  #       condition: service_healthy
+  #   entrypoint: ["sh", "-c", "sleep 10 && ./user"]
+  #   healthcheck:
+  #     test: ["CMD-SHELL", "grpc_health_probe -addr=:50053 || exit 1"]
+  #     interval: 10s    
+  #     timeout: 10s
+  #     retries: 10       
+  #     start_period: 40s
+  #   networks:
+  #     - quboolkallyanam-network
 
-  chat:
-    build:
-      context: ../../
-      dockerfile: deploy/docker/Dockerfile.chat
-    environment:
-      - MONGODB_URI=mongodb://mongodb:27017
-    ports:
-      - "50054:50054"
-    depends_on:
-      mongodb:
-        condition: service_healthy
-    healthcheck:
-      test: ["CMD-SHELL", "grpc_health_probe -addr=:50054 || exit 1"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-    networks:
-      - quboolkallyanam-network
+  # chat:
+  #   build:
+  #     context: ../../
+  #     dockerfile: deploy/docker/Dockerfile.chat
+  #   environment:
+  #     - MONGODB_URI=mongodb://mongodb:27017
+  #   ports:
+  #     - "50054:50054"
+  #   depends_on:
+  #     mongodb:
+  #       condition: service_healthy
+  #   healthcheck:
+  #     test: ["CMD-SHELL", "grpc_health_probe -addr=:50054 || exit 1"]
+  #     interval: 30s
+  #     timeout: 10s
+  #     retries: 3
+  #   networks:
+  #     - quboolkallyanam-network
   
   gateway:
     build:
       context: ../../
       dockerfile: deploy/docker/Dockerfile.gateway
     environment:
-      - AUTH_SERVICE_ADDR=auth:50051
-      - ADMIN_SERVICE_ADDR=admin:50052
-      - USER_SERVICE_ADDR=user:50053
-      - CHAT_SERVICE_ADDR=chat:50054
+      - CONFIG_PATH=/app/configs/config.yaml
+      - AUTH_SERVICE_ADDRESS=auth:50051
+      - ADMIN_SERVICE_ADDRESS=admin:50052
+      - USER_SERVICE_ADDRESS=user:50053
+      - CHAT_SERVICE_ADDRESS=chat:50054
+      - LOG_LEVEL=debug
     ports:
       - "8080:8080"
     depends_on:
       auth:
         condition: service_healthy
-      admin:
-        condition: service_healthy
-      user:
-        condition: service_healthy
-      chat:
-        condition: service_healthy
+      # admin:
+      #   condition: service_healthy
+      # user:
+      #   condition: service_healthy
+      # chat:
+      #   condition: service_healthy
     restart: always
     healthcheck:
       test: ["CMD-SHELL", "wget -qO- http://localhost:8080/health || exit 1"]
@@ -192,6 +223,7 @@ services:
 volumes:
   postgres_data:
   mongodb_data:
+  redis_data:
 
 networks:
   quboolkallyanam-network:
