--- a/services/auth/configs/config.yaml
+++ b/services/auth/configs/config.yaml
@@ -31,6 +31,11 @@ auth:
     access_token_minutes: 15
     refresh_token_days: 7
     issuer: "qubool-kallyanam"
+
+rabbitmq:
+  dsn: "amqp://guest:guest@localhost:5672/"
+  exchange_name: "qubool_events"
+  
 admin:
   default_email: "admin@quboolkallyanam.com"
   default_password: "Admin@123456" # This should be changed in production
