--- a/deploy/docker/Dockerfile.migration
+++ b/deploy/docker/Dockerfile.migration
@@ -4,7 +4,10 @@ WORKDIR /app
 
 ENV GOPROXY=https://goproxy.io,direct
 
-# Copy necessary go.mod files
+# Install required packages (rarely changes)
+RUN apk add --no-cache git wget
+
+# Copy necessary go.mod files first (rarely changes)
 COPY tools/go.mod tools/go.sum ./tools/
 COPY pkg/go.mod pkg/go.sum ./pkg/
 
@@ -12,7 +15,7 @@ COPY pkg/go.mod pkg/go.sum ./pkg/
 WORKDIR /app/tools
 RUN go mod download -x
 
-# Copy source code
+# Now copy the source code (changes frequently)
 WORKDIR /app
 COPY tools/ ./tools/
 COPY pkg/ ./pkg/
@@ -32,7 +35,7 @@ WORKDIR /app
 COPY --from=builder /migration .
 
 # Create migration entrypoint script
-COPY deploy/docker/migration-entrypoint.sh /app/entrypoint.sh
+COPY deploy/docker/migration-entrypoint.sh ./entrypoint.sh
 RUN chmod +x /app/entrypoint.sh
 
 ENTRYPOINT ["/app/entrypoint.sh"]
