--- a/deploy/docker/Dockerfile.payment
+++ b/deploy/docker/Dockerfile.payment
@@ -51,6 +51,9 @@ COPY --from=builder /bin/grpc_health_probe /bin/grpc_health_probe
 RUN mkdir -p /app/configs
 COPY services/payment/configs/config.yaml /app/configs/
 
+# Copy templates directory
+COPY services/payment/templates/ /app/templates/
+
 # Override localhost in the config with proper container names
 RUN sed -i 's/host: localhost/host: postgres/g' /app/configs/config.yaml && \
     sed -i 's|amqp://guest:guest@localhost:5672/|amqp://guest:guest@rabbitmq:5672/|g' /app/configs/config.yaml
